--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<body>
-		<script type="module" src="src/index.js"></script>
+		<script type="module" src="src/index.ts"></script>
 	</body>
 </html>
